# laroccod.github.io

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py  theme.py
src/components/: cards.py  chips.py  footer.py  matrix_rain.py  navbar.py  section.py  wordmark.py
src/data/: content.py  projects.py
src/views/: contact.py  cv.py  hero.py  presentations.py  projects.py  teaching.py
